--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
