--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.11.1",
+    "http-proxy-middleware": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.11",
     "mongoose-unique-validator": "^2.0.3",
@@ -21,9 +22,13 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon index.js"
+    "test": "echo \"Error: no test specified \" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": "12.18.3"
+  }
 }
